--- a/templates/scroll.html
+++ b/templates/scroll.html
@@ -1,2 +1,17 @@
-<h1>welcome to the old Stump</h1>
-<img src="{{ image }}">
+<html>
+    <head>
+        <title>
+        	Fargoth's Stump
+        </title>
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+        <style type="text/css">
+        </style>
+    </head>
+    <body style="background-color:black;">
+    	<div class="span12">
+    		<h1 class="vertical" style="color:white">Welcome to Ol' Fargoth's Stump</h1>
+			<img style="text-align:center; width:600px; height:600px;" class="img-polaroid" src="{{ image }}">
+    	</div>
+	</body>
+</html>
