--- a/templates/scroll.html
+++ b/templates/scroll.html
@@ -3,6 +3,7 @@
         <title>
         	Fargoth's Stump
         </title>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Henny+Penny|Diplomata+SC' rel='stylesheet' type='text/css'>
