--- a/templates/scroll-foundation.html
+++ b/templates/scroll-foundation.html
@@ -48,14 +48,14 @@
 
         <div class="large-8 columns">
             <div class="panel">
-                <h5>Panel Title</h5>
+                <h5>{{ title }}</h5>
                 <p>{{ content | safe }}</p>
             </div>
         </div>
         <div class="large-4 columns">
             <div class="panel">
                 <p>
-                  <img style="width:260px; height:200px;" src="{{ image }}" />
+                  <img style="width:260px; height:300px;" src="{{ image }}" />
                 </p>
             </div>
         </div>
