--- a/templates/scroll-foundation.html
+++ b/templates/scroll-foundation.html
@@ -16,38 +16,13 @@
             }
         </style>
     </head>
-    <body>
+    <body style="margin-top:20px;">
         <!-- Main Grid Section -->
 
         <div class="row">
 
-        <div class="large-3 columns">
-            <div class="panel">
-                <h5>Panel Title</h5>
-                <p>This is a three columns grid panel with an arbitrary height.</p>
-            </div>
-        </div>
-        <div class="large-6 columns">
-            <div class="panel">
-                <h5>Panel Title</h5>
-                <p>This is a six columns grid panel with an arbitrary height. Bacon ipsum dolor sit amet salami ham hock biltong ball tip drumstick sirloin pancetta meatball short loin.</p>
-            </div>
-        </div>
-        <div class="large-3  columns">
-            <div class="panel">
-                <h5>Panel Title</h5>
-                <p>This is a three columns grid panel with an arbitrary height.</p>
-            </div>
-        </div>
-
-        </div>
-
-
-
-        <div class="row">
-
         <div class="large-8 columns">
-            <div class="panel">
+            <div style="height:342px; overflow-y:scroll;" class="panel">
                 <h5>{{ title }}</h5>
                 <p>{{ content | safe }}</p>
             </div>
@@ -68,7 +43,7 @@
         <div class="large-4 columns">
             <div class="panel">
                 <p>
-                    <img src="http://placehold.it/400x300" />
+                    <img src="{{ image }}" />
                 </p>
             </div>
         </div>
@@ -92,19 +67,19 @@
 
         <div class="row">
 
-        <div class="large-6 columns">
-            <div class="panel">
-                <h5>Panel Title</h5>
-                <p>This is a six columns grid panel with an arbitrary height. Bacon ipsum dolor sit amet salami ham hock biltong ball tip drumstick sirloin pancetta meatball short loin.</p>
+        <div class="large-4 columns">
+            <div style="height:217px; overflow-y:scroll;" class="panel">
+                <h5>{{ title }}</h5>
+                <p>{{ content | safe}}</p>
             </div>
         </div>
-        <div class="large-3 columns">
+        <div class="large-4 columns">
             <div class="panel">
                 <h5>Panel Title</h5>
                 <p>This is a three columns grid panel with an arbitrary height.</p>
             </div>
         </div>
-        <div class="large-3 columns">
+        <div class="large-4 columns">
             <div class="panel">
                 <h5>Panel Title</h5>
                 <p>This is a three columns grid panel with an arbitrary height.</p>
