got recursive calls functioning

--- a/templates/scroll-angular.html
+++ b/templates/scroll-angular.html
@@ -26,7 +26,7 @@
         </div>
 
         <div style="text-align:center;" class="row">
-        	<button class="large button expand" ng-click="getNPC()">Test</button>
+        	<button class="large button expand" ng-click="test()">Test</button>
         </div>
         {% endraw %}
 		<script type="text/javascript" src="http://code.angularjs.org/1.1.5/angular.js"></script>
