--- a/templates/scroll-angular.html
+++ b/templates/scroll-angular.html
@@ -15,7 +15,7 @@
 	                </div>
 	            </div>
 	        </div>
-	        <div class="row">
+	        <div class="hide-for-small row">
 		        <div  ng-repeat="npc in list" class="large-4 columns">
 		            <div style="height:217px; overflow-y:scroll;" class="panel">
 		                <h5>{{ npc.title }}</h5>
@@ -23,10 +23,6 @@
 		            </div>
 		        </div>
 	        </div>
-        </div>
-
-        <div style="text-align:center;" class="row">
-        	<button class="large button expand" ng-click="test()">Test</button>
         </div>
         {% endraw %}
 		<script type="text/javascript" src="http://code.angularjs.org/1.1.5/angular.js"></script>
