--- a/templates/scroll-angular.html
+++ b/templates/scroll-angular.html
@@ -11,12 +11,25 @@
             .center {
             	text-align: center;
             }
+            .fargoth {
+				border-radius: 100px;
+				box-shadow: 0px 0px 0px 3pt #0c0c0c, 0px 0px 0px 6pt #fa6a6a, 0px 0px 0px 9pt #0c0c0c;
+
+				-moz-transition:moz-box-shadow 0.5s;
+			    -webkit-transition:webkit-box-shadow 0.5s;
+			    -o-transition:box-shadow 0.5s;
+			    transition:box-shadow 0.5s;
+			}
+
+			.fargoth:hover {
+				box-shadow: 0px 0px 0px 0pt #fff0cf;
+			}
         </style>
 	</head>
 	<body style="background-color:#fff0cf; margin-top:20px;" ng-controller="ScrollsCtrl">
 		<div style="border-radius:10px; border-color:#1cbabc; background-color:#68c39f;" class="row panel">
-			<img style="float:right; width:50px; height:50px" src="static/images/fargoth-head-trans.png">
-			<img style="float:left; width:50px; height:50px" src="static/images/fargoth-head-trans.png">
+			<img class="fargoth" style="float:right; width:50px; height:50px" src="static/images/fargoth-head-trans.png">
+			<img class="fargoth" style="float:left; width:50px; height:50px" src="static/images/fargoth-head-trans.png">
 			<h1 class="center">Fargoth's Stump</h1>
 		</div>
 		{% raw %}
