added links to my home page on fargoths domepiece

--- a/templates/scroll-angular.html
+++ b/templates/scroll-angular.html
@@ -28,8 +28,13 @@
 	</head>
 	<body style="background-color:#fff0cf; margin-top:20px;" ng-controller="ScrollsCtrl">
 		<div style="border-radius:10px; border-color:#1cbabc; background-color:#68c39f;" class="row panel">
-			<img class="fargoth" style="float:right; width:50px; height:50px" src="static/images/fargoth-head-trans.png">
-			<img class="fargoth" style="float:left; width:50px; height:50px" src="static/images/fargoth-head-trans.png">
+			<a href="http://whats.gd" target="_blank">
+				<img class="fargoth" style="float:right; width:50px; height:50px" src="static/images/fargoth-head-trans.png">
+			</a>
+			<a href="http://whats.gd" target="_blank">
+				<img class="fargoth" style="float:left; width:50px; height:50px" src="static/images/fargoth-head-trans.png">
+			</a>
+			
 			<h1 class="center">Fargoth's Stump</h1>
 		</div>
 		{% raw %}
