switched to compressed files for deploy

--- a/templates/scroll-angular.html
+++ b/templates/scroll-angular.html
@@ -2,7 +2,7 @@
 	<head>
 		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Henny+Penny' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="static/css/app.css" />
+		<link rel="stylesheet" href="static/stylesheets/app.css" />
 		<style type="text/css">
             h1 {
                 font-family: 'Henny Penny', cursive;
@@ -66,7 +66,8 @@
 	        </div>
         </div>
         {% endraw %}
-		<script type="text/javascript" src="http://code.angularjs.org/1.1.5/angular.js"></script>
+        <!--script type="text/javascript" src="http://code.angularjs.org/1.1.5/angular.js"></script-->
+		<script type="text/javascript" src="http://code.angularjs.org/1.1.5/angular.min.js"></script>
 		<script type="text/javascript" src="static/javascripts/scrolls.js"></script>
 		<script type="text/javascript" src="static/javascripts/directives.js"></script>
 	</body>
